Fixed info update for FTDI devices on Android

Added check for Q_OS_ANDROID.  If connected to Android, look for a valid TTY_USB id.

Task-number: QTBUG-36296
Change-Id: Ic99b0ddd7afc6621e795e2f6cf2952cae6634fb0
Reviewed-by: Luke Andrew <codereview@lukeandrew.com>
Reviewed-by: Laszlo Papp <lpapp@kde.org>